// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Input/Dropdown Default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(55,65,81,var(--text-opacity));
}

.c2 {
  margin-top: 0.25rem;
  position: relative;
  border-radius: 0.375rem;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #ffffff;
  border-color: #d2d6dc;
  border-width: 1px;
  border-radius: 0.375rem;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  display: block;
  width: 100%;
}

.c3::-webkit-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3::-moz-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3:-ms-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3::placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0 3px rgba(164,202,254,0.45);
  border-color: #a4cafe;
}

@media (min-width:640px) {
  .c3 {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

<div
  data-reach-combobox=""
>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      Pick your language
    </label>
  </div>
  <div
    className="c2"
  >
    <input
      aria-autocomplete="both"
      aria-expanded={false}
      aria-haspopup="listbox"
      className="c3"
      data-reach-combobox-input=""
      id="dropdown-storybook-default"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Molecules/Input/Dropdown Error 1`] = `
.c5 svg {
  height: 1.25rem;
  width: 1.25rem;
  --text-opacity: 1;
  color: rgba(240,82,82,var(--text-opacity));
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(55,65,81,var(--text-opacity));
}

.c2 {
  margin-top: 0.25rem;
  position: relative;
  border-radius: 0.375rem;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #ffffff;
  border-color: #d2d6dc;
  border-width: 1px;
  border-radius: 0.375rem;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  display: block;
  width: 100%;
  padding-right: 2.5rem;
  --border-opacity: 1;
  border-color: rgba(248,180,180,var(--border-opacity));
  --text-opacity: 1;
  color: rgba(119,29,29,var(--text-opacity));
}

.c3::-webkit-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3::-moz-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3:-ms-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3::placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0 3px rgba(164,202,254,0.45);
  border-color: #a4cafe;
}

.c3::-webkit-input-placeholder {
  --placeholder-opacity: 1;
  color: rgba(248,180,180,var(--placeholder-opacity));
}

.c3::-moz-placeholder {
  --placeholder-opacity: 1;
  color: rgba(248,180,180,var(--placeholder-opacity));
}

.c3:-ms-input-placeholder {
  --placeholder-opacity: 1;
  color: rgba(248,180,180,var(--placeholder-opacity));
}

.c3::placeholder {
  --placeholder-opacity: 1;
  color: rgba(248,180,180,var(--placeholder-opacity));
}

.c3:focus {
  --border-opacity: 1;
  border-color: rgba(248,180,180,var(--border-opacity));
  box-shadow: 0 0 0 3px rgba(248,180,180,0.45);
}

.c4 {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  padding-right: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
}

.c6 {
  margin-top: 0.25rem;
  font-size: 0.875rem;
  --text-opacity: 1;
  color: rgba(224,36,36,var(--text-opacity));
}

@media (min-width:640px) {
  .c3 {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

<div
  data-reach-combobox=""
>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      Pick your language
    </label>
  </div>
  <div
    className="c2"
  >
    <input
      aria-autocomplete="both"
      aria-expanded={true}
      aria-haspopup="listbox"
      className="c3"
      data-reach-combobox-input=""
      error="This is an error!"
      id="dropdown-storybook-error"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      value="COBOL"
    />
    <div
      className="c4"
    >
      <div
        className="c5"
        color="alert"
      >
        <svg
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
  </div>
  <p
    className="c6"
  >
    This is an error!
  </p>
</div>
`;

exports[`Storyshots Molecules/Input/Dropdown Prefilled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(55,65,81,var(--text-opacity));
}

.c2 {
  margin-top: 0.25rem;
  position: relative;
  border-radius: 0.375rem;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #ffffff;
  border-color: #d2d6dc;
  border-width: 1px;
  border-radius: 0.375rem;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  display: block;
  width: 100%;
}

.c3::-webkit-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3::-moz-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3:-ms-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3::placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0 3px rgba(164,202,254,0.45);
  border-color: #a4cafe;
}

@media (min-width:640px) {
  .c3 {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

<div
  data-reach-combobox=""
>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      Pick your language
    </label>
  </div>
  <div
    className="c2"
  >
    <input
      aria-autocomplete="both"
      aria-expanded={true}
      aria-haspopup="listbox"
      className="c3"
      data-reach-combobox-input=""
      id="dropdown-storybook-prefilled"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      value="C"
    />
  </div>
</div>
`;

exports[`Storyshots Molecules/Input/Dropdown Required 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(55,65,81,var(--text-opacity));
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(107,114,128,var(--text-opacity));
}

.c3 {
  margin-top: 0.25rem;
  position: relative;
  border-radius: 0.375rem;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #ffffff;
  border-color: #d2d6dc;
  border-width: 1px;
  border-radius: 0.375rem;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  display: block;
  width: 100%;
}

.c4::-webkit-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c4::-moz-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c4:-ms-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c4::placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 0 3px rgba(164,202,254,0.45);
  border-color: #a4cafe;
}

@media (min-width:640px) {
  .c4 {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

<div
  data-reach-combobox=""
>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      Pick your language
    </label>
    <span
      className="c2"
    >
      Required
    </span>
  </div>
  <div
    className="c3"
  >
    <input
      aria-autocomplete="both"
      aria-expanded={false}
      aria-haspopup="listbox"
      className="c4"
      data-reach-combobox-input=""
      id="dropdown-storybook-required"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      value=""
    />
  </div>
</div>
`;
